--- a/renderer/tsconfig.json
+++ b/renderer/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../tsconfig.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../main/helpers/config.ts"],
   "exclude": ["node_modules"]
 }
