--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@mui/x-data-grid": "^7.12.0",
+    "@mui/x-date-pickers": "^7.12.1",
     "electron-serve": "^1.3.0",
     "electron-store": "^8.2.0",
     "material-icons": "^1.13.12",
+    "moment": "^2.30.1",
     "ws": "^8.18.0"
   },
   "devDependencies": {
