Add notes dialog, update file handling, and start work on websocket replay and error handling

--- a/renderer/tsconfig.json
+++ b/renderer/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "../tsconfig.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../main/helpers/files.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../main/helpers/fileHandler.ts"],
   "exclude": ["node_modules"]
 }
