--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "electron-store": "^8.2.0",
     "material-icons": "^1.13.12",
     "moment": "^2.30.1",
-    "ws": "^8.18.0"
+    "nanoid": "^3.3.4",
+    "ws": "^8.18.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@emotion/cache": "^11.11.0",
