--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,6 +1,6 @@
-appId: com.example.nextron
-productName: My Nextron App
-copyright: Copyright © 2018 Yoshihide Shiono
+appId: cc.ocld.gb0csl
+productName: ILLW logger software
+copyright: Copyright © 2024 Matthew S. MM0KLQ
 directories:
   output: dist
   buildResources: resources
@@ -10,3 +10,9 @@ files:
       - package.json
       - app
 publish: null
+win:
+  target:
+    - target: portable
+      arch:
+        - x64
+        - ia32
