--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app/background.js",
   "scripts": {
     "dev": "nextron",
-    "build": "nextron build",
+    "build": "nextron build --config ./electron-builder.yml",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
